--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@apollo/server": "^4.11.0",
     "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
     "graphql": "^16.9.0",
-    "mysql2": "^3.11.3",
+    "ioredis": "^5.4.1",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
+    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.4",
