added bigjs, dataloader

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
+    "big.js": "^6.2.2",
+    "dataloader": "^2.2.2",
     "graphql": "^16.9.0",
     "ioredis": "^5.4.1",
     "pg": "^8.13.0",
@@ -43,6 +45,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/big.js": "^6.2.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.16.12",
